--- a/.github/workflows/scorecards-analysis.yml
+++ b/.github/workflows/scorecards-analysis.yml
@@ -5,6 +5,10 @@ on:
   schedule:
     - cron: '44 6 * * *'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ contains( github.ref , 'heads/ref/master') }}
+
 # Declare default permissions as read only.
 permissions: read-all
 
