--- a/server/channels/app/worktemplates/templates.yaml
+++ b/server/channels/app/worktemplates/templates.yaml
@@ -9,13 +9,13 @@ visibility: public
 description:
     channel:
         id: "worktemplate.product_teams.feature_release.description.channel"
-        defaultMessage: "Chat with your team in a Feature Release channel that connects easily with your boards, playbooks and app bots."
+        defaultMessage: "Chat with your team about any release blockers and changes in a channel that connects easily with your boards, playbooks and other integrations."
     playbook:
         id: "worktemplate.product_teams.feature_release.description.playbook"
-        defaultMessage: "Create transparent workflows across development teams to ensure your feature development process is seamless."
+        defaultMessage: "Boost cross-functional team collaboration with task checklists and automation that support your feature development process. When you’re done, run a retrospective and make improvements for your next release."
     integration:
         id: "worktemplate.product_teams.feature_release.description.integration"
-        defaultMessage: "Increase productivity in your channel by integrating a Jira bot and Github bot. These will be downloaded for you."
+        defaultMessage: "Increase productivity in your channel by integrating your most commonly used tools to support your feature release, such as GitHub. These will be downloaded for you."
         illustration: "/static/worktemplates/integrations.png"
 content:
   - channel:
@@ -42,15 +42,11 @@ description:
   channel:
     id: worktemplate.product_teams.goals_and_okrs.channel
     defaultMessage: >-
-      Clear focus is essential to team success and with this Project you can
-      document the team’s goals and OKR’s as well as post updates in the
-      dedicated channel.
+      Chat about your goals and progress with your team, async or real-time, and stay up to date with changes in a single channel.
   integration:
     id: worktemplate.product_teams.goals_and_okrs.integration
     defaultMessage: >-
-      Clear focus is essential to team success and with this Project you can
-      document the team’s goals and OKR’s as well as post updates in the
-      dedicated channel.
+      Increase productivity in your channel by integrating your most commonly used tools, such as Zoom, to facilitate easy collaboration. These will be downloaded for you.
     illustration: /static/worktemplates/integrations.png
 content:
   - channel:
@@ -70,18 +66,15 @@ description:
   channel:
     id: worktemplate.product_teams.bug_bash.channel
     defaultMessage: >-
-      Get organized and bash all the bugs with  this project! Build momentum and
-      measure progress using included Playbook, Board, and Channel.
+      Plan and manage bug reports and resolutions in a single channel, that’s easily accessible to your team and organization.
   playbook:
     id: worktemplate.product_teams.bug_bash.playbook
     defaultMessage: >-
-      Get organized and bash all the bugs with  this project! Build momentum and
-      measure progress using included Playbook, Board, and Channel.
+      Use checklists to assign testing areas and automated tasks to run a comprehensive bug bash process. Use a retrospective to review your process and improve it for next time.
   integration:
     id: worktemplate.product_teams.bug_bash.integration
     defaultMessage: >-
-      Get organized and bash all the bugs with  this project! Build momentum and
-      measure progress using included Playbook, Board, and Channel.
+      Increase productivity in your channel by integrating your most commonly used tools, such as Jira, to track your bug bash progress. These will be downloaded for you.
     illustration: /static/worktemplates/integrations.png
 content:
   - playbook:
@@ -106,17 +99,11 @@ description:
   channel:
     id: worktemplate.product_teams.sprint_planning.channel
     defaultMessage: >-
-      Use a Project to make sprint planning a breeze. The channel keeps the
-      conversation and questions focused. The sprint plan keeps everyone on task
-      for the week and the Retrospective board brings the team together to
-      continuously improve.
+      Chat with your team in a channel that connects easily with your boards and integrations.
   integration:
     id: worktemplate.product_teams.sprint_planning.integration
     defaultMessage: >-
-      Use a Project to make sprint planning a breeze. The channel keeps the
-      conversation and questions focused. The sprint plan keeps everyone on task
-      for the week and the Retrospective board brings the team together to
-      continuously improve.
+      Increase productivity in your channel by integrating your most commonly used tools, such as Zoom. These will be downloaded for you.
     illustration: /static/worktemplates/integrations.png
 content:
   - channel:
@@ -137,10 +124,10 @@ visibility: public
 description:
     channel:
         id: "worktemplate.devops.incident_resolution.description.channel"
-        defaultMessage: "When everything is going wrong, having a repeatable process is the key to making sure everything is made right as quickly as possible. This Project combines everything Mattermost offers to ensure the fires are put out and stakeholders informed along the way."
+        defaultMessage: "Chat with your team about priorities, add stakeholders, provide updates, and work toward a resolution in a single channel."
     playbook:
         id: "worktemplate.devops.incident_resolution.description.playbook"
-        defaultMessage: "When everything is going wrong, having a repeatable process is the key to making sure everything is made right as quickly as possible. This Project combines everything Mattermost offers to ensure the fires are put out and stakeholders informed along the way."
+        defaultMessage: "Use checklists and automation to bring in key team members, and share how your incident is tracking toward resolution."
 content:
   - playbook:
       id: irpb
@@ -161,10 +148,10 @@ visibility: public
 description:
   channel:
     id: worktemplate.devops.product_release.channel
-    defaultMessage: Don’t miss a step during a product release with this Project. Assign tasks from the Playbook checklist and hit milestones with the Board. Use Channels to keep everyone on the same page.
+    defaultMessage: Chat with your team about daily milestones, any blockers, and changes to deliverables, easily and quickly.
   playbook:
     id: worktemplate.devops.product_release.playbook
-    defaultMessage: Don’t miss a step during a product release with this Project. Assign tasks from the Playbook checklist and hit milestones with the Board. Use Channels to keep everyone on the same page.
+    defaultMessage: Create repeatable workflows that are easy to follow and implement so product releases are reliable and on time.
 content:
   - playbook:
       id: playbook-1674851385983
@@ -189,15 +176,11 @@ description:
   channel:
     id: worktemplate.companywide.goals_and_okrs.channel
     defaultMessage: >-
-      Clear focus is essential to team success and with this Project you can
-      document the team’s goals and OKR’s as well as post updates in the
-      dedicated channel.
+      Chat about your goals and progress with your team, async or real-time, and stay up to date with changes in a single channel.
   integration:
     id: worktemplate.companywide.goals_and_okrs.integration
     defaultMessage: >-
-      Clear focus is essential to team success and with this Project you can
-      document the team’s goals and OKR’s as well as post updates in the
-      dedicated channel.
+      Increase productivity in your channel by integrating your most commonly used tools, such as Zoom, to facilitate easy collaboration. These will be downloaded for you.
     illustration: /static/worktemplates/integrations.png
 content:
   - channel:
@@ -216,13 +199,11 @@ description:
   channel:
     id: worktemplate.companywide.create_project.channel
     defaultMessage: >-
-      Plan a Roadmap using this Project Board and collaborate on topic in the
-      channel created with this template.
+      Chat with your team about your new project and decide how you’re going to structure it, in a collaborative channel.
   integration:
     id: worktemplate.companywide.create_project.integration
     defaultMessage: >-
-      Plan a Roadmap using this Project Board and collaborate on topic in the
-      channel created with this template.
+      Increase productivity in your channel by integrating your most commonly used tools. These will be downloaded for you.
     illustration: /static/worktemplates/integrations.png
 content:
   - channel:
@@ -249,15 +230,11 @@ description:
   channel:
     id: worktemplate.leadership.goals_and_okrs.channel
     defaultMessage: >-
-      Clear focus is essential to team success and with this Project you can
-      document the team’s goals and OKR’s as well as post updates in the
-      dedicated channel.
+      Chat about your goals and progress with your team, async or real-time, and stay up to date with changes in a single channel.
   integration:
     id: worktemplate.leadership.goals_and_okrs.integration
     defaultMessage: >-
-      Clear focus is essential to team success and with this Project you can
-      document the team’s goals and OKR’s as well as post updates in the
-      dedicated channel.
+      Increase productivity in your channel by integrating your most commonly used tools, such as Zoom, to facilitate easy collaboration. These will be downloaded for you.
     illustration: /static/worktemplates/integrations.png
 content:
   - channel:
