--- a/webapp/channels/package.json
+++ b/webapp/channels/package.json
@@ -233,6 +233,7 @@
     "test:watch": "cross-env TZ=Etc/UTC jest --watch",
     "test:coverage": "cross-env TZ=Etc/UTC jest --coverage",
     "mmjstool": "mmjstool",
+    "extract": "formatjs extract 'src/**/!(*.d).ts*' --id-interpolation-pattern '[sha512:contenthash:base64:6]' --additional-function-names '$t' --format simple --out-file i18n/entemp.json",
     "i18n-extract": "npm run mmjstool -- i18n extract-webapp --webapp-dir ./src",
     "i18n-clean-empty": "npm run mmjstool -- i18n clean-empty --webapp-dir ./src",
     "i18n-check-empty-src": "npm run mmjstool -- i18n check-empty-src --webapp-dir ./src",
