--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,7 +10,8 @@
     "check": "npm run check --workspaces --if-present",
     "fix": "npm run fix --workspaces --if-present",
     "check-types": "npm run check-types --workspaces --if-present",
-    "clean": "npm run clean --workspaces --if-present"
+    "clean": "npm run clean --workspaces --if-present",
+    "i18n-extract1": "npm run i18n-extract1 --workspaces --if-present"
   },
   "devDependencies": {
     "blessed": "0.1.81",
@@ -24,6 +25,7 @@
     "platform/components",
     "platform/types",
     "playbooks",
-    "boards"
+    "boards",
+    "i18n"
   ]
 }
