--- a/.github/workflows/e2e-tests-ci.yml
+++ b/.github/workflows/e2e-tests-ci.yml
@@ -7,7 +7,7 @@ on:
       - mono-repo*
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
+  cancel-in-progress: ${{ !contains( github.ref , 'heads/ref/master') }}
 defaults:
   run:
     shell: bash
